Backport of fix for use of _path for links instead of _url, because the latter breaks Refinery running in an SSL-only environment.  The original commit is:  https://github.com/resolve/refinerycms/commit/83d769d854f45c0de5ba4528268a34363ca27b6c#diff-4

--- a/core/app/views/shared/admin/_image_picker.html.erb
+++ b/core/app/views/shared/admin/_image_picker.html.erb
@@ -3,7 +3,7 @@
   thumbnail ||= 'medium'
   toggle_image_display ||= false
   randomiser = rand(Time.now.yesterday.to_i * Time.now.to_i)
-  current_image_link_href = insert_admin_images_url(:dialog => true, :callback => "image_picker_#{randomiser}_changed",
+  current_image_link_href = insert_admin_images_path(:dialog => true, :callback => "image_picker_#{randomiser}_changed",
                                                     :width => 866, :height => 510)
   current_image_title = t('.change', :what =>  description.titleize)
 -%>
