--- a/core/app/views/shared/admin/_form_actions.html.erb
+++ b/core/app/views/shared/admin/_form_actions.html.erb
@@ -57,13 +57,13 @@
     <%= render :partial => "/shared/admin/continue_editing", :locals => {:f => f} if continue_editing -%>
     <%= hidden_field_tag :continue_editing, false if continue_editing %>
 
-    <%= link_to(cancel_button_text, cancel_url,
+    <%= link_to(cancel_button_text, cancel_path,
                 :title => cancel_title,
                 :id => cancel_button_id,
                 :class => "close_dialog button") unless hide_cancel %>
   </div>
   <div class='form-actions-right'>
-    <%= link_to(delete_button_text, delete_url,
+    <%= link_to(delete_button_text, delete_path,
                 :title => delete_title,
                 :id => delete_button_id,
                 :method => :delete,
