--- a/pages/app/views/admin/pages/_actions.html.erb
+++ b/pages/app/views/admin/pages/_actions.html.erb
@@ -3,15 +3,15 @@
     <%= render :partial => "/shared/admin/search", :locals => {:url => admin_pages_url} %>
   </li>
   <li>
-    <%= link_to t('.create_new_page'), new_admin_page_url, :class => "add_icon" %>
+    <%= link_to t('.create_new_page'), new_admin_page_path, :class => "add_icon" %>
   </li>
 <% if @pages.many? and !searching? %>
   <li>
-    <%= link_to t('.reorder_pages'), admin_pages_url,
+    <%= link_to t('.reorder_pages'), admin_pages_path,
                 :id => "reorder_action",
                 :class => "reorder_icon" %>
 
-    <%= link_to t('.reorder_pages_done'), admin_pages_url,
+    <%= link_to t('.reorder_pages_done'), admin_pages_path,
                 :id => "reorder_action_done",
                 :style => "display: none;",
                 :class => "reorder_icon" %>
