--- a/resources/app/views/admin/resources/_actions.html.erb
+++ b/resources/app/views/admin/resources/_actions.html.erb
@@ -3,7 +3,7 @@
     <%= render :partial => "/shared/admin/search", :locals => {:url => admin_resources_url} %>
   </li>
   <li>
-    <%= link_to t('.upload_new'), new_admin_resource_url(:dialog => true,
+    <%= link_to t('.upload_new'), new_admin_resource_path(:dialog => true,
                                                          :width => 600,
                                                          :height => 300),
                 :class => "add_icon" %>
