--- a/resources/app/views/admin/resources/_existing_resource.html.erb
+++ b/resources/app/views/admin/resources/_existing_resource.html.erb
@@ -20,7 +20,7 @@
   <%= render :partial => "/shared/admin/form_actions",
              :locals => {
                :f => nil,
-               :cancel_url => admin_resources_url,
+               :cancel_url => admin_resources_path,
                :submit_button_text => t('.button_text'),
                :hide_cancel => true,
                :hide_delete => true,
