--- a/core/app/views/admin/_head.html.erb
+++ b/core/app/views/admin/_head.html.erb
@@ -20,7 +20,7 @@
   <meta charset='<%= ::Refinery::Application.config.encoding %>' />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <%= yield :meta %>
-  <title><%= RefinerySetting.find_or_set(:site_name, 'Company Name') -%> - Refinery</title>
+  <title><%= RefinerySetting.find_or_set(:site_name, 'Strange Loop') -%> - Refinery</title>
   <%= csrf_meta_tag %>
 
   <%= stylesheet_link_tag 'refinery/site_bar',
